--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
                <div class="about__buttons">
                   <a download="" href="assets/img/Gourav_Sen_Resume.pdf" class="button button--flex">
-                     Download CV <i class="fa-solid fa-download button__icon"></i>
+                     Download Resume <i class="fa-solid fa-download button__icon"></i>
                   </a>
                </div>
             </div>
