--- a/index.html
+++ b/index.html
@@ -411,33 +411,27 @@
                </div>
             </div>
 
-            <form action="" class="contact__form grid">
+            <form action="https://api.web3forms.com/submit" method="POST" class="contact__form grid">
+               <input type="hidden" name="access_key" value="959070b2-da84-44df-8fa2-88e14577c957">
                <div class="contact__inputs grid">
                   <div class="contact__content">
                      <label for="" class="contact__label">Name</label>
-                     <input type="text" class="contact__input">
+                     <input name = "Full Name" type="text" class="contact__input">
                   </div>
 
                   <div class="contact__content">
                      <label for="" class="contact__label">Email</label>
-                     <input type="email" class="contact__input">
+                     <input name="Email" type="email" class="contact__input">
                   </div>
                </div>
-
-               <div class="contact__content">
-                  <label for="" class="contact__label">Project</label>
-                  <input type="text" class="contact__input">
-               </div>
-
                <div class="contact__content">
                   <label for="" class="contact__label">Message</label>
-                  <textarea name="" id="" cols="0" rows="7" class="contact__input"></textarea>
+                  <textarea name="message" id="" cols="0" rows="7" class="contact__input"></textarea>
                </div>
-
                <div>
-                  <a href="#" class="button button--flex">
-                     Send Message <i class="uil uil-message button__icon"></i>
-                  </a>
+                  <button class="button button--flex">
+                     Submit <i class="uil uil-message button__icon"></i>
+                  </button>
                </div>
             </form>
          </div>
