--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
 
                <div class="about__buttons">
-                  <a download="" href="assets/img/Gourav_Sen_0157AL211041.pdf" class="button button--flex">
+                  <a download="" href="assets/img/Resume.pdf" class="button button--flex">
                      Download Resume <i class="fa-solid fa-download button__icon"></i>
                   </a>
                </div>
